# face_recognition_system

./: Live_Compare.py  README.md  pyproject.toml  simple_facerec.py
